# BUProjectBackend

./: .env.example  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
src/: db.rs  main.rs  models.rs  repositories.rs  routes.rs  services.rs
src/controllers/: default_controller.rs
src/db/: app_state.rs
src/models/: default_model.rs
src/repositories/: default_repository.rs
src/routes/: default_routes.rs
src/services/: default_service.rs
