[package]
name = "BUProjectBackend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "BUProjectBackend"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio", "macros", "tls-rustls", "chrono"] }
dotenvy = "0.15.7"
tower-http = { version = "0.6.2", features = ["cors"] }